# nutrition-planner

./: .gitignore  README.md  policies.yaml  pyproject.toml  requirements.txt
data/: budget.csv  foods.csv  priorities.yaml
src/: __init__.py  constraints.py  io_loader.py  main.py  models.py  optimize.py  streamlit_app.py
src/app/: state.py  streamlit_app.py  ui_components.py  ui_helpers.py
tests/: test_io_dynamic.py  test_lp_builder.py  test_optimize_smoke.py
